# PizzaBot-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/backend/: Cargo.toml
crates/backend/src/: balancing.rs  client.rs  lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: communication.rs  globals.rs  lib.rs  orders.rs  temp_globals.rs
crates/commons/: Cargo.toml
crates/commons/src/: archive.rs  globals.rs  lib.rs  orders.rs  temp_globals.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: main.rs  misc_func.rs
crates/frontend/src/components/: ws.rs
