[package]
name = "pizza-bot-rs-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = {version= "0.3.18", features = ["time","env-filter"]}
tracing-web = "0.1.3"
yew = {version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
time = { version = "0.3", features = ["wasm-bindgen"] }
js-sys = "0.3.69"
web-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
gloo = "0.11.0"
